@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+     Added a couple utility functions I need in Pinto.
+
 0.063     2012-11-08 09:32:10 America/Los_Angeles
 
      Added StackObject type.
